--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,9 @@
     "@types/node": "18.13.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.10",
+    "axios": "^1.3.3",
     "next": "13.1.6",
+    "puppeteer": "^19.7.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.9.5"
