--- a/frontend/.env
+++ b/frontend/.env
@@ -1,5 +1,7 @@
-#Google Oauth
-
 GOOGLE_CLIENT_ID=147816423858-7rgu6oldr2414ifd6v0q6ucqu0bft4ie.apps.googleusercontent.com
 
 GOOGLE_CLIENT_SECRET=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
+
+NEXTAUTH_SECRET=JKSAFEFUEWNCFN398F29ICNI9H293H382C
+
+DATABASE_URL="file:./dev.db"
