--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,16 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.9.11",
+    "@next-auth/prisma-adapter": "^1.0.5",
     "@next/font": "13.1.6",
+    "@prisma/client": "^4.10.1",
     "@react-oauth/google": "^0.7.0",
+    "@stitches/react": "^1.2.8",
     "@types/node": "18.13.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.10",
     "axios": "^1.3.3",
     "next": "13.1.6",
+    "next-auth": "^4.19.2",
+    "nookies": "^2.5.2",
     "puppeteer": "^19.7.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.5"
+    "react-hook-form": "^7.43.1",
+    "typescript": "4.9.5",
+    "zod": "^3.20.6"
+  },
+  "devDependencies": {
+    "@types/cookie": "^0.5.1",
+    "prisma": "^4.10.1"
   }
 }
