--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@ GOOGLE_CLIENT_SECRET=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
 
 NEXTAUTH_SECRET=JKSAFEFUEWNCFN398F29ICNI9H293H382C
 
-DATABASE_URL="file:./dev.db"
+DATABASE_URL="mysql://root:docker@localhost:3307/geradordelinks"
