--- a/package.json
+++ b/package.json
@@ -19,17 +19,20 @@
     "@prisma/client": "^4.10.1",
     "@react-oauth/google": "^0.7.0",
     "@stitches/react": "^1.2.8",
+    "@tanstack/react-query": "^4.24.9",
     "@types/node": "18.13.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.10",
     "axios": "^1.3.3",
     "next": "13.1.6",
     "next-auth": "^4.19.2",
+    "next-seo": "^5.15.0",
     "nookies": "^2.5.2",
     "puppeteer": "^19.7.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.1",
+    "react-spinners": "^0.13.8",
     "typescript": "4.9.5",
     "zod": "^3.20.6"
   },
