--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@ GOOGLE_CLIENT_SECRET=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
 
 NEXTAUTH_SECRET=JKSAFEFUEWNCFN398F29ICNI9H293H382C
 
-DATABASE_URL="mysql://root:docker@localhost:3307/geradordelinks"
+DATABASE_URL='mysql://btri8ovgeuu6m728ecyq:pscale_pw_uzwtuSLEd0Tn0yAZJEAFxoXP8Buee0D7Ak1YrbYidjZ@us-east.connect.psdb.cloud/gerenciador-de-links?sslaccept=strict'
