--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "tsx src/server.ts",
-    "build": "tsup src --out-dir build"
+    "build": "tsup src"
   },
   "keywords": [],
   "author": "",
