--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
   },
   "dependencies": {
     "@fastify/cors": "^8.2.0",
+    "@types/node": "^18.14.0",
     "fastify": "^4.13.0",
     "puppeteer": "^19.7.2",
     "zod": "^3.20.6"
