--- a/server/package.json
+++ b/server/package.json
@@ -1,4 +1,15 @@
 {
+  "name": "server",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "dev": "tsx src/server.ts",
+    "build": "tsup src --out-dir build"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": "",
   "devDependencies": {
     "@types/node": "^18.14.0",
     "tsup": "^6.6.3",
@@ -10,16 +21,5 @@
     "fastify": "^4.13.0",
     "puppeteer": "^19.7.2",
     "zod": "^3.20.6"
-  },
-  "name": "server",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "dev": "tsx src/server.ts",
-    "build": "tsup src --out-dir build"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": ""
+  }
 }
