--- a/server/package.json
+++ b/server/package.json
@@ -12,11 +12,12 @@
   "description": "",
   "devDependencies": {
     "@types/node": "^18.14.0",
-    "typescript": "^4.9.5"
-  },
-  "dependencies": {
     "tsup": "^6.6.3",
     "tsx": "^3.12.3",
+    "typescript": "^4.9.5",
+    "vitest": "^0.28.5"
+  },
+  "dependencies": {
     "@fastify/cors": "^8.2.0",
     "fastify": "^4.13.0",
     "puppeteer": "^19.7.2",
