--- a/server/package.json
+++ b/server/package.json
@@ -14,8 +14,7 @@
     "@types/node": "^18.14.0",
     "tsup": "^6.6.3",
     "tsx": "^3.12.3",
-    "typescript": "^4.9.5",
-    "vitest": "^0.28.5"
+    "typescript": "^4.9.5"
   },
   "dependencies": {
     "@fastify/cors": "^8.2.0",
