--- a/server/package.json
+++ b/server/package.json
@@ -1,25 +1,17 @@
 {
   "name": "server",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "tsx src/server.ts",
-    "build": "tsup src --out-dir build"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
-  "devDependencies": {
-    "@types/node": "^18.14.0",
-    "tsup": "^6.6.3",
-    "tsx": "^3.12.3",
-    "typescript": "^4.9.5"
-  },
   "dependencies": {
     "@fastify/cors": "^8.2.0",
     "fastify": "^4.13.0",
-    "puppeteer": "^19.7.2",
-    "zod": "^3.20.6"
+    "puppeteer": "^19.7.2"
   }
 }
