--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "@fastify/cors": "^8.2.0",
+    "chrome-aws-lambda": "^10.1.0",
     "fastify": "^4.13.0",
+    "puppeteer-core": "^19.7.2"
+  },
+  "devDependencies": {
     "puppeteer": "^19.7.2"
   }
 }
