--- a/server/package.json
+++ b/server/package.json
@@ -9,13 +9,16 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "engines": {
+    "node": "^14"
+  },
   "dependencies": {
     "@fastify/cors": "^8.2.0",
-    "chrome-aws-lambda": "^10.1.0",
+    "chrome-aws-lambda": "^6",
     "fastify": "^4.13.0",
-    "puppeteer-core": "^19.7.2"
+    "puppeteer-core": "^6"
   },
   "devDependencies": {
-    "puppeteer": "^19.7.2"
+    "puppeteer": "^16.2.0"
   }
 }
